--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
+    "build": "webpack --mode production",
     "build-storybook": "storybook build"
   },
   "keywords": [],
@@ -38,7 +39,13 @@
     "@storybook/test": "^8.2.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "storybook": "^8.2.2",
-    "typescript": "^5.5.3"
+    "style-loader": "^4.0.0",
+    "typescript": "^5.5.3",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
