--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "AIDON_STORYBOOK=true storybook dev -p 6006",
     "build": "webpack --mode production",
     "build-storybook": "storybook build"
   },
