--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,5 +1,5 @@
 name: Build and Deploy Storybook
-on: 
+on:
   push:
     branches:
       - main
@@ -11,10 +11,18 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Install and Build 🔧
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16" # You can adjust this to your project's Node.js version
+
+      - name: Install Yarn
+        run: npm install -g yarn
+
+      - name: Install Dependencies and Build 🔧
         run: |
-          npm ci
-          npm run build-storybook
+          yarn install --frozen-lockfile
+          yarn build-storybook
         env:
           AIDON_STORYBOOK: true
           AIDON_STORYBOOK_BASE_PATH: /aid-on-ui-system
