--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "name": "aid-on-ui-system",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "src",
-    "public"
+    "dist"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
-    "build": "webpack --mode production",
+    "build": "tsc && webpack --mode production",
     "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
+  "peerDependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "framer-motion": "^11.3.2",
-    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "path-browserify": "^1.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
