--- a/package.json
+++ b/package.json
@@ -1,55 +1,62 @@
 {
   "name": "aid-on-ui-system",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.0",
+  "description": "UI component library for Aid-On",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c",
+    "prepublishOnly": "npm run build",
     "storybook": "storybook dev -p 6006",
-    "build": "tsc && webpack --mode production",
     "build-storybook": "storybook build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "peerDependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "framer-motion": "^11.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "path-browserify": "^1.0.1"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@chakra-ui/react": "^2.8.0",
+    "@chakra-ui/icons": "^2.0.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.6.1",
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
+    "@babel/preset-react": "^7.22.0",
+    "@babel/preset-typescript": "^7.22.0",
+    "@chakra-ui/react": "^2.8.0",
+    "@chakra-ui/icons": "^2.0.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@rollup/plugin-babel": "^6.0.0",
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@storybook/addon-essentials": "^8.2.2",
     "@storybook/addon-interactions": "^8.2.2",
     "@storybook/addon-links": "^8.2.2",
     "@storybook/addon-onboarding": "^8.2.2",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
     "@storybook/blocks": "^8.2.2",
-    "@storybook/nextjs": "^8.2.2",
     "@storybook/react": "^8.2.2",
     "@storybook/react-webpack5": "^8.2.2",
-    "@storybook/test": "^8.2.2",
-    "@types/path-browserify": "^1.0.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^7.1.2",
-    "file-loader": "^6.2.0",
-    "storybook": "^8.2.2",
-    "style-loader": "^4.0.0",
-    "typescript": "^5.5.3",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
-  }
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/path-browserify": "^1.0.0",
+    "framer-motion": "^11.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "rollup": "^3.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "path-browserify": "^1.0.1"
+  },
+  "license": "ISC"
 }
